--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </div>
         <h2>OBJETIVO MENSUAL: Construir una cadencia eficiente y sostenible. <h2>
         <h2>FASE: Adquisición.</h2>
-        <!-- <h2 id ="pageTitle"> PRÓXIMA CARRERA Bariloche UTMB 130km 20/11/2025. </h2>
-        <div id="countdown" class="countdown-llamativo"></div> 
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Ushuaia UTMB 12KM 22/03/2026. </h2>
+        <!-- <div id="countdown" class="countdown-llamativo"></div> 
         <h2 id="result"></h2>-->
                 
     <div class="sub-container">
-        <h4>SEMANA 1
-        <br>Objetivo semanal: Mantener la cadencia en subida. </br>
+        <h4>SEMANA 2
+        <br>Objetivo semanal: Apretar en las subidas. </br>
             </h4>   
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 14 repeticiones </p>            
+        <p> 3 vueltas x 13 repeticiones </p>            
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,45 +46,43 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 11 km trail senderos corribles. </h3>
-                <p> -1 km de menor a mayor, por senderos bajos. </p>
+                <br> Lunes: 13 km trail (con Altimetría). </h3>
+                <p> -2 km de menor a mayor. </p>
                 <p> -3 km ágiles. </p>
-                <p> -4 km, 40" ágiles x 40" suaves. </p>
+                <p> -5 km, 45" ágiles x 45" suaves. </p>
                 <p> -3 km fuertes. </p>
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes mañana: 5 km calle al mejor ritmo posible. </h3>
+                <br> Martes mañana: 4 km calle, 2km ágiles x 2km fuertísimooo. </h3>
                 <h3> Martes tarde: 14 km trail senderos corribles. </h3>
-                <p> -2 km de mayor a menor. </p>
-                <p> -4 km,  40" subiendo x 15" bajando. </p>
-                <p> -4 km sensaciones incómodas en subida al límite. </p>
-                <p> -4 km sensaciones incómodas en bajada al límite. </p>
+                <p> -3 km fuerte. </p>
+                <p> -4 km, 20" fuerte x 20" suave, senderos bajos. </p>
+                <p> -4 km subidas fuertes x bajadas controladas. </p>
+                <p> -3 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 12 km trail (con Altimetría) "series triangulares". </h3>
-                <p> -2 km ágiles. </p>
-                <p> -2 km, 10 series de 200m subida fuerte x pausa pasiva 1'/1'30". </p>
-                <p> -2 km, 10 series de 200m bajada fuerte x pausa pasiva 1'30"/ 2'. </p>
-                <p> -2 km, 10 series de 200m plano fuerte x pausa pasiva 2'. </p>
-                <p> -4 km mayor a menor. </p>
+                <br> Jueves: 13 km trail senderos corribles. </h3>
+                <p> -3 km de menor a mayor. </p>
+                <p> -10 km en el mejor tiempo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 4 
-                <br> Viernes: 16 km trail (con Altimetría). </h3>
-                <p> -1 km fuerte. </p>
-                <p> -2 km de mayor a menor. </p>
-                <p> -5 km, 40" ágiles x 40" treking exigido, toque donde toque. </p>
-                <p> -8 km buenas sensaciones. </p>
+                <br> Viernes: 18 km trail (con Altimetría). </h3>
+                <p> -2 km fuerte (entrenamos la salida). </p>
+                <p> -5 km, 30" ágiles x 30" suave (subida). </p>
+                <p> -2 km trekking exigido (subida). </p>
+                <p> -9 km de menor a mayor bajada. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 25 km trail (con Altimetría). </h3>
-                <p> -3 km ágiles. </p>
-                <p> -5 km, 500m fuertes x 2' suaves. </p>
-                <p> -5 km, 500m fuertísimo x 1'30" suaves. </p>
-                <p> -12 km bajas pulsaciones. </p>
+                <br> Sábado: 26 km trail (con Altimetría). </h3>
+                <p> -3 km fuerte. </p>
+                <p> -4 km, 40" subiendo x 20" bajada. </p>
+                <p> -4 km el mejor ritmo sostenido en subida. </p>
+                <p> -3 km trekking fuerte. </p>
+                <p> -12 km, 6km fuerte x 6km a buenas sensaciones. </p>
             </div> 
         </div>
         <div>
@@ -96,7 +94,7 @@
         </div>
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Movilidad de aductor rana (3 series x 30"). </p>     
+            <p> - Movilidad de aductor rana (12 series x 22 ejercicio x 9 descanso). </p>     
         </div>
 
         <div class="image-container">  
@@ -110,12 +108,12 @@
         </div>      
     </div>
 
-    <!-- <div class="sub-container">
-        <h4>SEMANA 22
-            <br>Objetivo semanal: Apretar en la subida. </br>
+    <div class="sub-container">
+        <h4>SEMANA 3
+            <br>Objetivo semanal: Apretar en las transiciones. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 14 repeticiones </p>
+        <p> 4 vueltas x 11 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -131,58 +129,59 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Martes: 14 km calle. </h3>
-                <p> -2 km menor a mayor. </p>
-                <p> -3 km, 2' fuertes x 4' suaves. </p>
-                <p> -3 km, 4' suaves x 2' fuertísimooos. </p>
-                <p> -2 km, 1' fuerte x 4' ágiles. </p>
-                <p> -4 km buenas sensaciones. </p>
-                <audio controls>
-                    <source src="Audio5.mp3" type="audio/mp3">
-                    Tu navegador no soporta el elemento de audio.
-                </audio>
+                <br> Lunes: 10 km trail senderos corribles. </h3>
+                <p> -2 km de menor a mayor. </p>
+                <p> -2 km subidas ágiles + bajadas fuertes. </p>
+                <p> -3 km, 2' fuertes x 3' suaves. </p>
+                <p> -3 km fuertes. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Jueves mañana: 7 km calle en el mejor tiempo posible. </h3>
-                <h3> Jueves tarde: 18 km trail Parque de Montaña. </h3>
-                <p> -6 km ágiles. </p>
-                <p> -6 km, 30" ágiles x 30" suaves. </p>
-                <p> -6 km de menor a mayor. </p>
-                <audio controls>
-                    <source src="Audio6.mp3" type="audio/mp3">
-                    Tu navegador no soporta el elemento de audio.
-                </audio>
+                <br> Martes mañana: 4 km calle, por debajo de 5. </h3>
+                <h3> Martes tarde: 11 km trail "pasadas circulares". </h3>
+                <p> -2 km de menor a mayor subiendo. </p>
+                <p> -2 km fuerte bajando. </p>
+                <p> -3 km, 200m fuertes x 100m ágiles
+                    <br> + 200m fuertes x 100m ágiles. </p>
+                <p> -4 km buenas sensaciones bajando. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Viernes: 13 km trail Parque de Montaña. </h3>
-                <p> -2 km fuertes. </p>
-                <p> -4 km ritmo incómodo. </p>
-                <p> -4 km, 15" fuertes x 15" suave. </p>
-                <p> -3 km de menor a mayor. </p>
-                <audio controls>
-                    <source src="Audio7.mp3" type="audio/mp3">
-                    Tu navegador no soporta el elemento de audio.
-                </audio>
+                <br> Jueves: 10 km calle "pasadas". </h3>
+                <p> -2 km fuerte. </p>
+                <p> -4 km, 5 series de 600m fuertes x 300m suave en subida. </p>
+                <p> -3 km, 4 series de 300m fuertísimo x 400m suave. </p>
+                <p> -1 km mejor ritmo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Sábado: 25 km trail, Áspero + Tres quebradas + Gateado + Santo Tomás. </h3>
-                <p> -4 km de menor a mayor. </p>
-                <p> -5 km buenas sensaciones. </p>
-                <p> -5 km, 2' trekking exigido x 2' suaves. </p>
-                <p> -11 km bajas pulsaciones. </p>
-                <audio controls>
-                    <source src="Audio8.mp3" type="audio/mp3">
+                <br> Viernes: 6.5 km trail "series triangulares". </h3>
+                <p> -3 km ágiles. </p>
+                <p> -0.5 km, 5 series de 100m subida fuerte x pausa pasiva 30". </p>
+                <p> -0.5 km, 5 series de 100m bajada fuerte x pausa pasiva 40". </p>
+                <p> -0.5 km, 5 series de 100m plano fuerte x pausa pasiva 30". </p>
+                <p> -2 km mejor ritmo posible. </p>                
+            </div>
+             <div class="column">
+                <h3>Dia 
+                <br> Sábado: 17 km trail senderos corribles.</h3>
+                <p> -3 km fuertes. </p>                
+                <p> -4 km, 45" fuertes x 45" ágiles. </p>                
+                <p> -5 km buenas sensaciones. </p>                
+                <p> -5 km sensaciones incómodas. </p>                
+            </div>
+        </div>
+        <div>
+            <audio controls>
+                    <source src="Audio2.mp3" type="audio/mp3">
+                    <source src="Audio2.ogg" type="audio/ogg">
                     Tu navegador no soporta el elemento de audio.
                 </audio>
-            </div>
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Duchas frias-caliente (30" x 3', 3 veces como mínimo). </p>     
+            <p> -Masaje de popitlio (3' x pierna). </p>     
         </div> 
 
         <div class="image-container">  
@@ -195,7 +194,7 @@
         <canvas id="myChart-line-2"></canvas>
         </div>
 
-    </div> -->
+    </div> 
 
     <script src="script.js"></script>
 
