Refactor HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     </div>
         <h2>OBJETIVO MENSUAL: Construir una cadencia eficiente y sostenible. </h2>
         <h2>FASE: Adquisición.</h2>
-        <h2 id ="pageTitle"> PRÓXIMA CARRERA sábado 14/02/2026. </h2>
-        <!--    Ushuaia UTMB 12KM 22/03/2026. </h2> -->
-         <div id="countdown" class="countdown-llamativo"></div> 
-        <h2 id="result"></h2>
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Ushuaia UTMB 12KM 22/03/2026. </h2> 
+         <!--<div id="countdown" class="countdown-llamativo"></div> 
+        <h2 id="result"></h2>-->
                 
     <div class="sub-container">
         <h4>SEMANA 4
@@ -192,4 +191,5 @@
 <img class="" src="logo gde blanco horizontal.png" alt="Blanco">     
 </body>
 </html>
+
 
