--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </div>
         <h2>OBJETIVO MENSUAL: Construir una cadencia eficiente y sostenible. </h2>
         <h2>FASE: Adquisición.</h2>
-        <h2 id ="pageTitle"> PRÓXIMA CARRERA Ushuaia UTMB 12KM 22/03/2026. </h2> 
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Ushuaia UTMB 12KM 21/03/2026. </h2> 
          <!--<div id="countdown" class="countdown-llamativo"></div> 
         <h2 id="result"></h2>-->
                 
     <div class="sub-container">
-        <h4>SEMANA 4
-        <br>Objetivo semanal: Buenas sensaciones. </br>
+        <h4>SEMANA 6
+        <br>Objetivo semanal: Apretar en los falsos llanos. </br>
             </h4>   
         <p>Entrada en calor </p>   
         <p> 3 vueltas x 13 repeticiones </p>            
@@ -46,37 +46,45 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 11 km senderos corribles. </h3>
-                <p> -2 km fuertes. </p>
-                <p> -4 km de menor a mayor. </p>
-                <p> -5 km ágiles. </p>
+                <br> Lunes: 16 km trail senderos corribles. </h3>
+                <p> -3 km de mayor a menor. </p>
+                <p> -4 km ágiles. </p>
+                <p> -4 km, 20" fuerte x 20" suave. </p>
+                <p> -5 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes: 10 km trail senderos corribles. </h3>
-                <p> -3 km fuertes. </p>
-                <p> -4 km ágiles. </p>
-                <p> -3 km buenas sensaciones. </p>
+                <br> Martes: 16 km trail (con Altimetría) "series triangulares". </h3>
+                <p> -2 km ágiles. </p>
+                <p> -3 km, 10 series de 300m subida fuerte x 1'30" pausa pasiva. </p>
+                <p> -3 km, 10 series de 300m bajada fuerte x 2' pausa pasiva. </p>
+                <p> -3 km, 10 series de 300m plano fuerte x 30" pausa pasiva. </p>
+                <p> -5 km bajas pulsaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves: 11 km calle. </h3>
-                <p> -2 km fuertes. </p>
-                <p> -7 km, 15" ágiles x 15" suave. </p>
-                <p> -2 km fuertes. </p>
+                <br> Jueves: 11 km trail (con Altimetría). </h3>
+                <p> -2 km fuerte. </p>
+                <p> -3 km subimos 300m fuerte y bajamos suave 50m. </p>
+                <p> -4 km sensaciones incómodas. </p>
+                <p> -2 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 4 
-                <br> Viernes: 12 km trail (con Altimetría). </h3>
-                <p> -2 km de menor a mayor. </p>
-                <p> -4 km buenas sensaciones. </p>
-                <p> -6 km en el mejor ritmo posible. </p>
+                <br> Viernes: 14 km trail mixto (calle + senderos corribles). </h3>
+                <p> -3 km de menor a mayor. </p>
+                <p> -5 km subidas ágiles x bajada fuerte. </p>
+                <p> -6 km calle, 3km agiles x 3km fuerte. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado:10 km CARRERA. </h3>>
-            </div> 
-        </div>
+                <br> Sábado:20 km trail (con Altimetría). </h3>
+                <p> -2 km de menor a mayor. </p>
+                <p> -3 km, 2' trote continuos x 3' trekking exigido. </p>
+                <p> -4 km, 20" suave x 20" fuerte. </p>
+                <p> -7 km bajas pulsaciones. </p>
+                <p> -4 km fuertes. </p>
+            </div>
         <div>
             <audio controls>
                     <source src="Audio1.mp3" type="audio/mp3">
@@ -86,7 +94,7 @@
         </div>
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Gluteo medio + brazos adelante (8 series x 22 ejercicio x 9 descanso). </p>     
+            <p> - Masaje de tensores de la fascia (3' x pierna). </p>     
         </div>
 
         <div class="image-container">  
@@ -101,11 +109,11 @@
     </div>
 
     <div class="sub-container">
-        <h4>SEMANA 5
-            <br>Objetivo semanal: Buscar sensaciones de la carrera. </br>
+        <h4>SEMANA 7
+            <br>Objetivo semanal: Apretar en las subidas. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 10 repeticiones </p>
+        <p> 4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video4.mp4" type="video/mp4">
@@ -121,43 +129,40 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 21 km trail (con Altimetría). </h3>
-                <p> -6 km ágiles. </p>
-                <p> -9 km, 30" ágiles x 30" suaves. </p>
-                <p> -6 km de menor a mayor. </p>
+                <br> Lunes: 13 km calle. </h3>
+                <p> -3 km ágiles. </p>
+                <p> -6 km, 500mts fuerte x 500mts ágiles. </p>
+                <p> -4 km al mejor ritmo posible. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 4 km calle, por debajo de 4. </h3>
-                <h3> Martes tarde: 16 km trail (con Altimetría). </h3>
-                <p> -3 km ágiles. </p>
-                <p> -7 km bajas pulsaciones. </p>
-                <p> -4 km, 400m fuertes x 200m suave. </p>
-                <p> -7 km buenas sensaciones. </p>
-                <p> -2 km de menor a mayor.</p>
+                <br> Martes: 12 km calle. </h3>
+                <p> -4 km buenas sensaciones. </p>
+                <p> -4 km ágiles. </p>
+                <p> -4 km al mejor ritmo posible. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves: 13 km calle. </h3>
-                <p> -2 km de menor a mayor. </p>
-                <p> -4 km, 2' fuertes x 2' suaves. </p>
-                <p> -3 km, 1km fuertísimoss x 1km suave x 1km ágil. </p>
-                <p> -4 km bajas pulsaciones. </p>
+                <br> Jueves: 14 km trail (con Altimetría). </h3>
+                <p> -3 km buenas sensaciones. </p>
+                <p> -4 km ágiles. </p>
+                <p> -5 km, 100m fuertes x 100m suaves. </p>
+                <p> -2 km al mejor ritmo posible. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 18 km trail (con Altimetría). </h3>
-                <p> -3 km de menor a mayor. </p>
-                <p> -4 km, 3' ágiles x 2' trekking exigido. </p>
-                <p> -11 km en el mejor ritmo posible. </p>
+                <br> Viernes: 16 km trail senderos corribles. </h3>
+                <p> -2 km ágiles. </p>
+                <p> -3 km, 100m ágiles x 100m suaves. </p>
+                <p> -8 km bajas pulsaciones. </p>
             </div>
              <div class="column">
                 <h3>Dia 
-                <br> Sábado: 27 km trail (con Altimetría). </h3>
-                <p> -4 km de menor a mayor. </p>
-                <p> -6 km buenas sensaciones. </p>
-                <p> -6 km, 2' trekking exigido x 2' suaves. </p>
-                <p> -11 km bajas pulsaciones. </p>   
+                <br> Sábado: 16 km trail (con Altimetría). </h3>
+                <p> -4 km fuertes. </p>
+                <p> -5 km buenas sensaciones. </p>
+                <p> -4 km sensaciones incómodas. </p>
+                <p> -3 km, 30" fuerte x 30" suaves. </p> 
             </div>
         </div>
         <div>
@@ -170,7 +175,7 @@
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Automasaje de soleo y gemelo (12 series x 35 ejercicio x 11 descanso). </p>     
+            <p> - Masaje de piramidal profundo (3' x pierna). </p>     
         </div> 
 
         <div class="image-container">  
